--- a/.github/workflows/build_stable_zh.yml
+++ b/.github/workflows/build_stable_zh.yml
@@ -35,7 +35,7 @@ jobs:
     with:
       repo: erpnext
       version: "13"
-      push: ${{ github.repository == 'goodhawk/erpnext13' && github.event_name != 'pull_request' }}
+      push: ${{ github.repository == 'guinanlin/frappe_docker' && github.event_name != 'pull_request' }}
     secrets:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -45,7 +45,7 @@ jobs:
     with:
       repo: erpnext
       version: "14"
-      push: ${{ github.repository == 'goodhawk/erpnext14' && github.event_name != 'pull_request' }}
+      push: ${{ github.repository == 'guinanlin/frappe_docker' && github.event_name != 'pull_request' }}
     secrets:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -53,7 +53,7 @@ jobs:
   update_versions:
     name: Update example.env and pwd.yml
     runs-on: ubuntu-latest
-    if: ${{ github.repository == 'goodhawk/erpnext14' && github.event_name != 'pull_request' }}
+    if: ${{ github.repository == 'guinanlin/frappe_docker' && github.event_name != 'pull_request' }}
     needs: v14
 
     steps:
