--- a/.github/workflows/build_stable_zh.yml
+++ b/.github/workflows/build_stable_zh.yml
@@ -9,9 +9,9 @@ on:
       - overrides/**
       - tests/**
       - compose.yaml
-      - docker-bake.hcl
+      - docker-bake-zh.hcl
       - example.env
-      - .github/workflows/build_stable.yml
+      - .github/workflows/build_stable_zh.yml
 
   push:
     branches:
@@ -31,7 +31,7 @@ on:
 
 jobs:
   v13:
-    uses: ./.github/workflows/docker-build-push.yml
+    uses: ./.github/workflows/docker-build-push-zh.yml
     with:
       repo: erpnext
       version: "13"
@@ -41,7 +41,7 @@ jobs:
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
   v14:
-    uses: ./.github/workflows/docker-build-push.yml
+    uses: ./.github/workflows/docker-build-push-zh.yml
     with:
       repo: erpnext
       version: "14"
