--- a/.github/workflows/all-in-one.yml
+++ b/.github/workflows/all-in-one.yml
@@ -5,7 +5,7 @@ on:
     tags:
       - "v*.*"
 env:
-  IMAGE_NAME: erpnext14 #这是您的镜像名
+  IMAGE_NAME: erpnext14 #镜像名
 jobs:
   get-tags:
     runs-on: ubuntu-20.04
@@ -33,8 +33,8 @@ jobs:
       - name: Login
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_USERPASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build && Push
         uses: docker/build-push-action@v2
         with:
@@ -42,5 +42,5 @@ jobs:
           file: ./erpnext14/Dockerfile
           push: true
           tags: |
-            ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ needs.get-tags.outputs.tags }}
-            ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest         
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ needs.get-tags.outputs.tags }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest         
