--- a/.github/workflows/docker-image-basic.yml
+++ b/.github/workflows/docker-image-basic.yml
@@ -39,7 +39,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./erpnext14/Dockerfile
+          file: ./erpnext14/Dockerfile-basic
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ needs.get-tags.outputs.tags }}
