--- a/.github/workflows/erpnext14-bubbles.yml
+++ b/.github/workflows/erpnext14-bubbles.yml
@@ -16,8 +16,8 @@ jobs:
     - name: Use GitHub Token
       run: |
         # 使用 GH_TOKEN 环境变量来设置 git 的身份验证信息
-        git config --global user.email "actions@github.com"
-        git config --global user.name "GitHub Actions"
+        git config --global user.email "guinan.lin@foxmail.com"
+        git config --global user.name "guinanlin"
         git config --global credential.helper store
 
         # 使用访问令牌来访问私有仓库
