--- a/.github/workflows/erpnext14-bubbles.yml
+++ b/.github/workflows/erpnext14-bubbles.yml
@@ -18,7 +18,7 @@ jobs:
       - name: set-output
         id: set-output-id
         run: |
-          VERSION=basic
+          VERSION=bubbles
           if [[ $GITHUB_REF == refs/tags/* ]]; then
             VERSION=${GITHUB_REF#refs/tags/v}
           fi
