--- a/.github/workflows/erpnext14-bubbles.yml
+++ b/.github/workflows/erpnext14-bubbles.yml
@@ -37,6 +37,8 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build && Push
         uses: docker/build-push-action@v2
+        env:
+          GHTOKEN: ${{ secrets.GH_TOKEN }}  # 添加这行以传递 GHTOKEN        
         with:
           context: .
           file: ./erpnext14/Dockerfile-bubbles
