--- a/.github/workflows/erpnext14-bubbles.yml
+++ b/.github/workflows/erpnext14-bubbles.yml
@@ -22,7 +22,7 @@ jobs:
           if [[ $GITHUB_REF == refs/tags/* ]]; then
             VERSION=${GITHUB_REF#refs/tags/v}
           fi
-          echo ::set-output name=tags::${VERSION}          
+          echo ::set-output name=tags::${VERSION}                    
   push-docker-hub:
     needs: get-tags
     runs-on: ubuntu-20.04
@@ -36,12 +36,12 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build && Push
-        uses: docker/build-push-action@v2
-        env:
-          GHTOKEN: ${{ secrets.GH_TOKEN }}  # 添加这行以传递 GHTOKEN        
+        uses: docker/build-push-action@v2    
         with:
           context: .
           file: ./erpnext14/Dockerfile-bubbles
+          secrets: |
+            GIT_AUTH_TOKEN=${{ secrets.GH_TOKEN }}          
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ needs.get-tags.outputs.tags }}
