--- a/erpnext14/Dockerfile-bubbles
+++ b/erpnext14/Dockerfile-bubbles
@@ -9,6 +9,8 @@ ENV ADMIN_PASSWORD=admin
 # mount授权token
 RUN --mount=type=secret,id=GIT_AUTH_TOKEN \
   export GIT_AUTH_TOKEN=$(cat /run/secrets/GIT_AUTH_TOKEN)
+
+ENV GIT_AUTH_TOKEN=${GIT_AUTH_TOKEN}
   
 # cat /run/secrets/GIT_AUTH_TOKEN
 
