--- a/erpnext14/Dockerfile-bubbles
+++ b/erpnext14/Dockerfile-bubbles
@@ -5,13 +5,15 @@ LABEL author=guinan.lin
 # 设定参数
 ENV MARIADB_ROOT_PASSWORD=Pass1234
 ENV ADMIN_PASSWORD=admin
+ENV SITE_ANME=site1.local
 
 # mount授权token
 RUN --mount=type=secret,id=GIT_AUTH_TOKEN \
   export GIT_AUTH_TOKEN=$(cat /run/secrets/GIT_AUTH_TOKEN)
 
 ENV GIT_AUTH_TOKEN=${GIT_AUTH_TOKEN}
-  
+ENV ERPNEXTCN_PATH=https://guinanlin:${GIT_AUTH_TOKEN}@github.com/guinanlin/erpnextcn.git
+
 # cat /run/secrets/GIT_AUTH_TOKEN
 
 # 拷贝基础软件安装脚本
@@ -23,6 +25,10 @@ RUN /bin/bash -c "chmod -R 777 /installdata/* && /installdata/install-erpnext14-
 # 切换用户
 USER frappe
 WORKDIR /home/frappe/frappe-bench
+
+# 安装中国本地化软件
+RUN bench get-app ${ERPNEXTCN_PATH}
+RUN bench --site ${SITE_ANME} install-app erpnextcn
 
 EXPOSE 3306 80
 
