--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,4 +14,4 @@ jobs:
         id: set-output-id
         run: |
           VERSION=bubbles
-          echo "版本号：${{ vars.APP_ID }}"     
+          echo "版本号：${{ env.DOCKER_IMAGE_NAME }}"     
