--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-20.04
     env:
       TZ: Asia/Shanghai
+      GIT_AUTH_TOKEN: ${{ secrets.GIT_AUTH_TOKEN }}
+      APP_ID: ${{ vars.APP_ID }}
     outputs:
       tags: ${{ steps.set-output-id.outputs.tags }}
     steps:
