--- a/erpnext14/Dockerfile-bubbles
+++ b/erpnext14/Dockerfile-bubbles
@@ -6,10 +6,11 @@ LABEL author=guinan.lin
 ENV MARIADB_ROOT_PASSWORD=Pass1234
 ENV ADMIN_PASSWORD=admin
 ENV SITE_ANME=site1.local
+# ENV GIT_AUTH_TOKEN= $GIT_AUTH_TOKEN
 
 # mount授权token
-RUN --mount=type=secret,id=GIT_AUTH_TOKEN \
-  export GIT_AUTH_TOKEN=$(cat /run/secrets/GIT_AUTH_TOKEN)
+# RUN --mount=type=secret,id=GIT_AUTH_TOKEN \
+#   export GIT_AUTH_TOKEN=$(cat /run/secrets/GIT_AUTH_TOKEN)
 
 ENV GIT_AUTH_TOKEN=${GIT_AUTH_TOKEN}
 ENV ERPNEXTCN_PATH=https://guinanlin:${GIT_AUTH_TOKEN}@github.com/guinanlin/erpnextcn.git
